create main section

--- a/index.html
+++ b/index.html
@@ -35,13 +35,27 @@
     </div>
   </nav>
 
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location.
-  Access them wherever you need, share and collaborate with friends,
-  family, and co-workers.
-
-  Get Started
+  <main class="main container">
+    <div class="main__content">
+      <h1 class="main__title">
+        All your files in one secure location, accessible anywhere.
+      </h1>
+      <p class="main__description">
+        Fylo stores your most important files in one secure location.
+        Access them wherever you need, share and collaborate with friends,
+        family, and co-workers.
+      </p>
+      <form class="main__form" action="#" method="post">
+        <input class="main__input-email" type="email" name="" id="" placeholder="Enter your email...">
+        <a class="main__button" href="#">
+          Get Started
+        </a>
+      </form>
+    </div>
+    <div class="main__image-container">
+      <img class="main__image" src="./images/illustration-1.svg" alt="Illustration 1" aria-hidden="true">
+    </div>
+  </main>
 
   Stay productive, wherever you are
 
