--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main class="main container">
     <div class="main__content">
-      <h1 class="main__title">
+      <h1 class="main__title title">
         All your files in one secure location, accessible anywhere.
       </h1>
       <p class="main__description">
@@ -57,28 +57,47 @@
     </div>
   </main>
 
-  Stay productive, wherever you are
+  <section class="introduction container">
+    <div class="introduction__content">
+      <h2 class="introduction__title title">
+        Stay productive, wherever you are
+      </h2>
+      <p class="introduction__description">
+        Never let location be an issue when accessing your files. Fylo has you
+        covered for all of your file storage needs.
+      </p>
+      <p class="introduction__description">
+        Securely share files and folders with friends, family and colleagues for
+        live collaboration. No email attachments required!
+      </p>
+      <a class="introduction__link" href="#">
+        See how Fylo works
+        <img class="introduction__link-icon" src="./images/icon-arrow.svg" alt="Arrow Icon">
+      </a>
 
-  Never let location be an issue when accessing your files. Fylo has you
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous.
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
+      <div class="introduction__card">
+        <img class="introduction__quotes-icon" src="./images/icon-quotes.svg" alt="Quotes Icon" aria-hidden="true">
+        <p class="introduction__testimonial">
+          Fylo has improved our team productivity by an order of magnitude. Since
+          making the switch our team has become a well-oiled collaboration machine.
+        </p>
+        <div class="introduction__profile-container">
+          <img class="introduction__profile-image" src="./images/avatar-testimonial.jpg" alt="Kyle Burton">
+          <div class="introduction__profile-group">
+            <p class="introduction__profile-name">
+              Kyle Burton
+            </p>
+            <p class="introduction__profile-info">
+              Founder & CEO, Huddle
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="introduction__image-group">
+      <img class="introduction__image" src="./images/illustration-2.svg" alt="Illustration 2" aria-hidden="true">
+    </div>
+  </section>
 
   Phone: +1-543-123-4567
   example@fylo.com
