create cta section and styling - add all elements in cta section - add styling for all elements

--- a/index.html
+++ b/index.html
@@ -99,17 +99,23 @@
     </div>
   </section>
 
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+  <section class="cta container">
+    <div class="cta__content">
+      <h2 class="cta__title title">
+        Get early access today
+      </h2>
+      <p class="cta__description">
+        It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.
+      </p>
+    </div>
+    <div class="cta__input-group">
+      <input class="cta__form" type="email" placeholder="email@example.com">
+      <a class="cta__button" href="#">
+        Get Started For Free
+      </a>
+    </div>
+  </section>
 
   <footer>
     <p class="attribution">
