create footer and styling

--- a/index.html
+++ b/index.html
@@ -117,11 +117,56 @@
     </div>
   </section>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <footer class="footer">
+    <img class="footer__logo" src="./images/logo.svg" alt="Logo">
+    <div class="footer__container">
+      <div class="footer__group">
+        <div class="footer__contact-group">
+          <img class="footer__contact-icon" src="./images/icon-phone.svg" alt="Phone Icon">
+          <p class="footer__contact-link">
+            Phone: +1-543-123-4567
+          </p>
+        </div>
+        <div class="footer__contact-group">
+          <img class="footer__contact-icon" src="./images/icon-email.svg" alt="Email Icon">
+          <p class="footer__contact-link">
+            example@fylo.com
+          </p>
+        </div>
+      </div>
+      <div class="footer__group">
+        <p class="footer__link">
+          About Us
+        </p>
+        <p class="footer__link">
+          Jobs
+        </p>
+        <p class="footer__link">
+          Press
+        </p>
+        <p class="footer__link">
+          Blog
+        </p>
+      </div>
+      <div class="footer__group">
+        <p class="footer__link">
+          Contact Us
+        </p>
+        <p class="footer__link">
+          Terms
+        </p>
+        <p class="footer__link">
+          Privacy
+        </p>
+      </div>
+      <div class="footer__group">
+        <div class="footer__social-group">
+          <img class="footer__social-icon" src="./images/facebook.svg" alt="Facebook">
+          <img class="footer__social-icon" src="./images/twitter.svg" alt="Twitter">
+          <img class="footer__social-icon" src="./images/instagram.svg" alt="Instagram">
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
