add active state

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </p>
       <form class="main__form" action="#" method="post">
         <input class="main__input-email" type="email" name="" id="" placeholder="Enter your email...">
-        <a class="main__button" href="#">
+        <a class="main__button button--active" href="#">
           Get Started
         </a>
       </form>
@@ -70,7 +70,7 @@
         Securely share files and folders with friends, family and colleagues for
         live collaboration. No email attachments required!
       </p>
-      <a class="introduction__link" href="#">
+      <a class="introduction__link button--active" href="#">
         See how Fylo works
         <img class="introduction__link-icon" src="./images/icon-arrow.svg" alt="Arrow Icon">
       </a>
@@ -111,7 +111,7 @@
     </div>
     <div class="cta__input-group">
       <input class="cta__form" type="email" placeholder="email@example.com">
-      <a class="cta__button" href="#">
+      <a class="cta__button button--active" href="#">
         Get Started For Free
       </a>
     </div>
@@ -135,35 +135,41 @@
         </div>
       </div>
       <div class="footer__group">
-        <p class="footer__link">
+        <a href="#" class="footer__link link--active">
           About Us
-        </p>
-        <p class="footer__link">
+        </a>
+        <a href="#" class="footer__link link--active">
           Jobs
-        </p>
-        <p class="footer__link">
+        </a>
+        <a href="#" class="footer__link link--active">
           Press
-        </p>
-        <p class="footer__link">
+        </a>
+        <a href="#" class="footer__link link--active">
           Blog
-        </p>
+        </a>
       </div>
       <div class="footer__group">
-        <p class="footer__link">
+        <a href="#" class="footer__link link--active">
           Contact Us
-        </p>
-        <p class="footer__link">
+        </a>
+        <a href="#" class="footer__link link--active">
           Terms
-        </p>
-        <p class="footer__link">
+        </a>
+        <a href="#" class="footer__link link--active">
           Privacy
-        </p>
+        </a>
       </div>
       <div class="footer__group">
         <div class="footer__social-group">
-          <img class="footer__social-icon" src="./images/facebook.svg" alt="Facebook">
-          <img class="footer__social-icon" src="./images/twitter.svg" alt="Twitter">
-          <img class="footer__social-icon" src="./images/instagram.svg" alt="Instagram">
+          <a href="#">
+            <img class="footer__social-icon social--active" src="./images/facebook.svg" alt="Facebook">
+          </a>
+          <a href="#">
+            <img class="footer__social-icon social--active" src="./images/twitter.svg" alt="Twitter">
+          </a>
+          <a href="#">
+            <img class="footer__social-icon social--active" src="./images/instagram.svg" alt="Instagram">
+          </a>
         </div>
       </div>
     </div>
