remove empty id in input form

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         family, and co-workers.
       </p>
       <form class="main__form" action="#" method="post">
-        <input class="main__input-email" type="email" name="" id="" placeholder="Enter your email...">
+        <input class="main__input-email" type="email" placeholder="Enter your email...">
         <a class="main__button button--active" href="#">
           Get Started
         </a>
